UI image gap fixed with display:block.

--- a/_sass/objects.scss
+++ b/_sass/objects.scss
@@ -298,6 +298,9 @@
   display: none;
   max-width: 100%;
   overflow: hidden;
+  img {
+    display: block;
+  }
   @media all and (min-width: 41em) {
     display: block;
     flex: 0 0 50%;
